--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "yarn": ">=1.22.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^5.14.1",
